--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
 <body>
 
     <main>
-        <form class="box" action="terrieworks.html" method="post">
+        <form class="box" action="index.html" method="post">
             <h1>Login</h1>
             <input type="text" name="" placeholder="Username">
             <input type="password" name="" placeholder="Password">
