--- a/Images.html
+++ b/Images.html
@@ -14,7 +14,7 @@
             <h1>MyWeb</h1>
             <nav>
                 <ul>
-                    <li class="dropdown"><a href="terrieworks.html">Home</a></li>
+                    <li class="dropdown"><a href="index.html">Home</a></li>
                     <li class="dropdown"><a class="dropbtn" href="Images.html">Gallery</a>
                         <div class="dropdown-content">
                             <a href="images.html" class="active">Images</a>
