--- a/Vids.html
+++ b/Vids.html
@@ -16,7 +16,7 @@
                         <li class="dropdown"><a class="dropbtn" href="Images.html">Gallery</a>
                             <div class="dropdown-content">
                                 <a href="Images.html">Images</a>
-                                <a href="Videos.html">Videos</a>
+                                <a href="Vids.html">Videos</a>
                             </div>
                         </li>
                         <li class="dropdown"><a>My Outputs</a>
